cmake_minimum_required(VERSION 3.8)
project(NSA2018)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        code/aodv-uu-0.9.6/lnx/kaodv-debug.c
        code/aodv-uu-0.9.6/lnx/kaodv-debug.h
        code/aodv-uu-0.9.6/lnx/kaodv-expl.c
        code/aodv-uu-0.9.6/lnx/kaodv-expl.h
        code/aodv-uu-0.9.6/lnx/kaodv-ipenc.c
        code/aodv-uu-0.9.6/lnx/kaodv-ipenc.h
        code/aodv-uu-0.9.6/lnx/kaodv-mod.c
        code/aodv-uu-0.9.6/lnx/kaodv-mod.h
        code/aodv-uu-0.9.6/lnx/kaodv-netlink.c
        code/aodv-uu-0.9.6/lnx/kaodv-netlink.h
        code/aodv-uu-0.9.6/lnx/kaodv-queue.c
        code/aodv-uu-0.9.6/lnx/kaodv-queue.h
        code/aodv-uu-0.9.6/lnx/kaodv.h
        code/aodv-uu-0.9.6/aodv_hello.c
        code/aodv-uu-0.9.6/aodv_hello.h
        code/aodv-uu-0.9.6/aodv_neighbor.c
        code/aodv-uu-0.9.6/aodv_neighbor.h
        code/aodv-uu-0.9.6/aodv_rerr.c
        code/aodv-uu-0.9.6/aodv_rerr.h
        code/aodv-uu-0.9.6/aodv_rrep.c
        code/aodv-uu-0.9.6/aodv_rrep.h
        code/aodv-uu-0.9.6/aodv_rreq.c
        code/aodv-uu-0.9.6/aodv_rreq.h
        code/aodv-uu-0.9.6/aodv_socket.c
        code/aodv-uu-0.9.6/aodv_socket.h
        code/aodv-uu-0.9.6/aodv_timeout.c
        code/aodv-uu-0.9.6/aodv_timeout.h
        code/aodv-uu-0.9.6/debug.c
        code/aodv-uu-0.9.6/debug.h
        code/aodv-uu-0.9.6/defs.h
        code/aodv-uu-0.9.6/endian.c
        code/aodv-uu-0.9.6/list.c
        code/aodv-uu-0.9.6/list.h
        code/aodv-uu-0.9.6/llf.c
        code/aodv-uu-0.9.6/llf.h
        code/aodv-uu-0.9.6/locality.c
        code/aodv-uu-0.9.6/locality.h
        code/aodv-uu-0.9.6/main.c
        code/aodv-uu-0.9.6/nl.c
        code/aodv-uu-0.9.6/nl.h
        code/aodv-uu-0.9.6/params.h
        code/aodv-uu-0.9.6/routing_table.c
        code/aodv-uu-0.9.6/routing_table.h
        code/aodv-uu-0.9.6/seek_list.c
        code/aodv-uu-0.9.6/seek_list.h
        code/aodv-uu-0.9.6/timer_queue.c
        code/aodv-uu-0.9.6/timer_queue.h
        code/dsr-uu-0.2/debug.c
        code/dsr-uu-0.2/debug.h
        code/dsr-uu-0.2/dsr-ack.c
        code/dsr-uu-0.2/dsr-ack.h
        code/dsr-uu-0.2/dsr-dev.c
        code/dsr-uu-0.2/dsr-dev.h
        code/dsr-uu-0.2/dsr-io.c
        code/dsr-uu-0.2/dsr-io.h
        code/dsr-uu-0.2/dsr-module.c
        code/dsr-uu-0.2/dsr-opt.c
        code/dsr-uu-0.2/dsr-opt.h
        code/dsr-uu-0.2/dsr-pkt.c
        code/dsr-uu-0.2/dsr-pkt.h
        code/dsr-uu-0.2/dsr-rerr.c
        code/dsr-uu-0.2/dsr-rerr.h
        code/dsr-uu-0.2/dsr-rrep.c
        code/dsr-uu-0.2/dsr-rrep.h
        code/dsr-uu-0.2/dsr-rreq.c
        code/dsr-uu-0.2/dsr-rreq.h
        code/dsr-uu-0.2/dsr-rtc-simple.c
        code/dsr-uu-0.2/dsr-rtc.h
        code/dsr-uu-0.2/dsr-srt.c
        code/dsr-uu-0.2/dsr-srt.h
        code/dsr-uu-0.2/dsr.h
        code/dsr-uu-0.2/endian.c
        code/dsr-uu-0.2/link-cache.c
        code/dsr-uu-0.2/link-cache.h
        code/dsr-uu-0.2/list.h
        code/dsr-uu-0.2/maint-buf.c
        code/dsr-uu-0.2/maint-buf.h
        code/dsr-uu-0.2/neigh.c
        code/dsr-uu-0.2/neigh.h
        code/dsr-uu-0.2/ns-agent.cc
        code/dsr-uu-0.2/ns-agent.h
        code/dsr-uu-0.2/send-buf.c
        code/dsr-uu-0.2/send-buf.h
        code/dsr-uu-0.2/tbl.h
        code/dsr-uu-0.2/timer.h
        code/olsrd-0.6.0/contrib/netsimpcap/src/config.c
        code/olsrd-0.6.0/contrib/netsimpcap/src/config.h
        code/olsrd-0.6.0/contrib/netsimpcap/src/debug.h
        code/olsrd-0.6.0/contrib/netsimpcap/src/netsimpcap.c
        code/olsrd-0.6.0/contrib/netsimpcap/src/network_tap.c
        code/olsrd-0.6.0/contrib/netsimpcap/src/network_tap.h
        code/olsrd-0.6.0/gui/linux-gtk/src/callbacks.c
        code/olsrd-0.6.0/gui/linux-gtk/src/common.h
        code/olsrd-0.6.0/gui/linux-gtk/src/interface.c
        code/olsrd-0.6.0/gui/linux-gtk/src/interface.h
        code/olsrd-0.6.0/gui/linux-gtk/src/ipc.c
        code/olsrd-0.6.0/gui/linux-gtk/src/ipc.h
        code/olsrd-0.6.0/gui/linux-gtk/src/main.c
        code/olsrd-0.6.0/gui/linux-gtk/src/main.h
        code/olsrd-0.6.0/gui/linux-gtk/src/nodes.c
        code/olsrd-0.6.0/gui/linux-gtk/src/nodes.h
        code/olsrd-0.6.0/gui/linux-gtk/src/olsr.c
        code/olsrd-0.6.0/gui/linux-gtk/src/olsr_protocol.h
        code/olsrd-0.6.0/gui/linux-gtk/src/packet.c
        code/olsrd-0.6.0/gui/linux-gtk/src/packet.h
        code/olsrd-0.6.0/gui/linux-gtk/src/pixmaps.h
        code/olsrd-0.6.0/gui/linux-gtk/src/routes.c
        code/olsrd-0.6.0/gui/linux-gtk/src/routes.h
        code/olsrd-0.6.0/gui/win32/Main/Frontend.cpp
        code/olsrd-0.6.0/gui/win32/Main/Frontend.h
        code/olsrd-0.6.0/gui/win32/Main/FrontendDlg.cpp
        code/olsrd-0.6.0/gui/win32/Main/FrontendDlg.h
        code/olsrd-0.6.0/gui/win32/Main/HnaEntry.cpp
        code/olsrd-0.6.0/gui/win32/Main/HnaEntry.h
        code/olsrd-0.6.0/gui/win32/Main/Ipc.h
        code/olsrd-0.6.0/gui/win32/Main/MidEntry.cpp
        code/olsrd-0.6.0/gui/win32/Main/MidEntry.h
        code/olsrd-0.6.0/gui/win32/Main/MprEntry.cpp
        code/olsrd-0.6.0/gui/win32/Main/MprEntry.h
        code/olsrd-0.6.0/gui/win32/Main/MyDialog1.cpp
        code/olsrd-0.6.0/gui/win32/Main/MyDialog1.h
        code/olsrd-0.6.0/gui/win32/Main/MyDialog2.cpp
        code/olsrd-0.6.0/gui/win32/Main/MyDialog2.h
        code/olsrd-0.6.0/gui/win32/Main/MyDialog3.cpp
        code/olsrd-0.6.0/gui/win32/Main/MyDialog3.h
        code/olsrd-0.6.0/gui/win32/Main/MyDialog4.cpp
        code/olsrd-0.6.0/gui/win32/Main/MyDialog4.h
        code/olsrd-0.6.0/gui/win32/Main/MyEdit.cpp
        code/olsrd-0.6.0/gui/win32/Main/MyEdit.h
        code/olsrd-0.6.0/gui/win32/Main/MyTabCtrl.cpp
        code/olsrd-0.6.0/gui/win32/Main/MyTabCtrl.h
        code/olsrd-0.6.0/gui/win32/Main/NodeEntry.cpp
        code/olsrd-0.6.0/gui/win32/Main/NodeEntry.h
        code/olsrd-0.6.0/gui/win32/Main/resource.h
        code/olsrd-0.6.0/gui/win32/Main/StdAfx.cpp
        code/olsrd-0.6.0/gui/win32/Main/StdAfx.h
        code/olsrd-0.6.0/gui/win32/Main/TrayIcon.cpp
        code/olsrd-0.6.0/gui/win32/Main/TrayIcon.h
        code/olsrd-0.6.0/gui/win32/Shim/shim.c
        code/olsrd-0.6.0/lib/arprefresh/src/olsrd_arprefresh.c
        code/olsrd-0.6.0/lib/arprefresh/src/olsrd_arprefresh.h
        code/olsrd-0.6.0/lib/bmf/src/Address.c
        code/olsrd-0.6.0/lib/bmf/src/Address.h
        code/olsrd-0.6.0/lib/bmf/src/Bmf.c
        code/olsrd-0.6.0/lib/bmf/src/Bmf.h
        code/olsrd-0.6.0/lib/bmf/src/NetworkInterfaces.c
        code/olsrd-0.6.0/lib/bmf/src/NetworkInterfaces.h
        code/olsrd-0.6.0/lib/bmf/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/bmf/src/Packet.c
        code/olsrd-0.6.0/lib/bmf/src/Packet.h
        code/olsrd-0.6.0/lib/bmf/src/PacketHistory.c
        code/olsrd-0.6.0/lib/bmf/src/PacketHistory.h
        code/olsrd-0.6.0/lib/dot_draw/src/olsrd_dot_draw.c
        code/olsrd-0.6.0/lib/dot_draw/src/olsrd_dot_draw.h
        code/olsrd-0.6.0/lib/dot_draw/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/dyn_gw/src/olsrd_dyn_gw.c
        code/olsrd-0.6.0/lib/dyn_gw/src/olsrd_dyn_gw.h
        code/olsrd-0.6.0/lib/dyn_gw/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/dyn_gw_plain/src/olsrd_dyn_gw_plain.c
        code/olsrd-0.6.0/lib/dyn_gw_plain/src/olsrd_dyn_gw_plain.h
        code/olsrd-0.6.0/lib/httpinfo/src/admin_interface.c
        code/olsrd-0.6.0/lib/httpinfo/src/admin_interface.h
        code/olsrd-0.6.0/lib/httpinfo/src/gfx.h
        code/olsrd-0.6.0/lib/httpinfo/src/olsrd_httpinfo.c
        code/olsrd-0.6.0/lib/httpinfo/src/olsrd_httpinfo.h
        code/olsrd-0.6.0/lib/httpinfo/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/httpinfo/src/olsrd_plugin.h
        code/olsrd-0.6.0/lib/mdns/src/Address.c
        code/olsrd-0.6.0/lib/mdns/src/Address.h
        code/olsrd-0.6.0/lib/mdns/src/mdns.c
        code/olsrd-0.6.0/lib/mdns/src/mdns.h
        code/olsrd-0.6.0/lib/mdns/src/NetworkInterfaces.c
        code/olsrd-0.6.0/lib/mdns/src/NetworkInterfaces.h
        code/olsrd-0.6.0/lib/mdns/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/mdns/src/Packet.c
        code/olsrd-0.6.0/lib/mdns/src/Packet.h
        code/olsrd-0.6.0/lib/mini/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/mini/src/olsrd_plugin.h
        code/olsrd-0.6.0/lib/nameservice/src/compat.c
        code/olsrd-0.6.0/lib/nameservice/src/compat.h
        code/olsrd-0.6.0/lib/nameservice/src/mapwrite.c
        code/olsrd-0.6.0/lib/nameservice/src/mapwrite.h
        code/olsrd-0.6.0/lib/nameservice/src/nameservice.c
        code/olsrd-0.6.0/lib/nameservice/src/nameservice.h
        code/olsrd-0.6.0/lib/nameservice/src/nameservice_msg.h
        code/olsrd-0.6.0/lib/nameservice/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/p2pd/src/dllist.c
        code/olsrd-0.6.0/lib/p2pd/src/dllist.h
        code/olsrd-0.6.0/lib/p2pd/src/NetworkInterfaces.c
        code/olsrd-0.6.0/lib/p2pd/src/NetworkInterfaces.h
        code/olsrd-0.6.0/lib/p2pd/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/p2pd/src/p2pd.c
        code/olsrd-0.6.0/lib/p2pd/src/p2pd.h
        code/olsrd-0.6.0/lib/p2pd/src/Packet.c
        code/olsrd-0.6.0/lib/p2pd/src/Packet.h
        code/olsrd-0.6.0/lib/p2pd/src/PacketHistory.c
        code/olsrd-0.6.0/lib/p2pd/src/PacketHistory.h
        code/olsrd-0.6.0/lib/pgraph/src/olsrd_pgraph.c
        code/olsrd-0.6.0/lib/pgraph/src/olsrd_pgraph.h
        code/olsrd-0.6.0/lib/quagga/src/client.c
        code/olsrd-0.6.0/lib/quagga/src/client.h
        code/olsrd-0.6.0/lib/quagga/src/common.h
        code/olsrd-0.6.0/lib/quagga/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/quagga/src/packet.c
        code/olsrd-0.6.0/lib/quagga/src/packet.h
        code/olsrd-0.6.0/lib/quagga/src/parse.c
        code/olsrd-0.6.0/lib/quagga/src/parse.h
        code/olsrd-0.6.0/lib/quagga/src/plugin.c
        code/olsrd-0.6.0/lib/quagga/src/plugin.h
        code/olsrd-0.6.0/lib/quagga/src/quagga.c
        code/olsrd-0.6.0/lib/quagga/src/quagga.h
        code/olsrd-0.6.0/lib/secure/src/md5.c
        code/olsrd-0.6.0/lib/secure/src/md5.h
        code/olsrd-0.6.0/lib/secure/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/secure/src/olsrd_secure.c
        code/olsrd-0.6.0/lib/secure/src/olsrd_secure.h
        code/olsrd-0.6.0/lib/secure/src/secure_messages.h
        code/olsrd-0.6.0/lib/tas/src/lua/lapi.c
        code/olsrd-0.6.0/lib/tas/src/lua/lapi.h
        code/olsrd-0.6.0/lib/tas/src/lua/lauxlib.c
        code/olsrd-0.6.0/lib/tas/src/lua/lauxlib.h
        code/olsrd-0.6.0/lib/tas/src/lua/lbaselib.c
        code/olsrd-0.6.0/lib/tas/src/lua/lcode.c
        code/olsrd-0.6.0/lib/tas/src/lua/lcode.h
        code/olsrd-0.6.0/lib/tas/src/lua/ldblib.c
        code/olsrd-0.6.0/lib/tas/src/lua/ldebug.c
        code/olsrd-0.6.0/lib/tas/src/lua/ldebug.h
        code/olsrd-0.6.0/lib/tas/src/lua/ldo.c
        code/olsrd-0.6.0/lib/tas/src/lua/ldo.h
        code/olsrd-0.6.0/lib/tas/src/lua/ldump.c
        code/olsrd-0.6.0/lib/tas/src/lua/lfunc.c
        code/olsrd-0.6.0/lib/tas/src/lua/lfunc.h
        code/olsrd-0.6.0/lib/tas/src/lua/lgc.c
        code/olsrd-0.6.0/lib/tas/src/lua/lgc.h
        code/olsrd-0.6.0/lib/tas/src/lua/liolib.c
        code/olsrd-0.6.0/lib/tas/src/lua/llex.c
        code/olsrd-0.6.0/lib/tas/src/lua/llex.h
        code/olsrd-0.6.0/lib/tas/src/lua/llimits.h
        code/olsrd-0.6.0/lib/tas/src/lua/lmathlib.c
        code/olsrd-0.6.0/lib/tas/src/lua/lmem.c
        code/olsrd-0.6.0/lib/tas/src/lua/lmem.h
        code/olsrd-0.6.0/lib/tas/src/lua/loadlib.c
        code/olsrd-0.6.0/lib/tas/src/lua/lobject.c
        code/olsrd-0.6.0/lib/tas/src/lua/lobject.h
        code/olsrd-0.6.0/lib/tas/src/lua/lopcodes.c
        code/olsrd-0.6.0/lib/tas/src/lua/lopcodes.h
        code/olsrd-0.6.0/lib/tas/src/lua/lparser.c
        code/olsrd-0.6.0/lib/tas/src/lua/lparser.h
        code/olsrd-0.6.0/lib/tas/src/lua/lstate.c
        code/olsrd-0.6.0/lib/tas/src/lua/lstate.h
        code/olsrd-0.6.0/lib/tas/src/lua/lstring.c
        code/olsrd-0.6.0/lib/tas/src/lua/lstring.h
        code/olsrd-0.6.0/lib/tas/src/lua/lstrlib.c
        code/olsrd-0.6.0/lib/tas/src/lua/ltable.c
        code/olsrd-0.6.0/lib/tas/src/lua/ltable.h
        code/olsrd-0.6.0/lib/tas/src/lua/ltablib.c
        code/olsrd-0.6.0/lib/tas/src/lua/ltests.c
        code/olsrd-0.6.0/lib/tas/src/lua/ltm.c
        code/olsrd-0.6.0/lib/tas/src/lua/ltm.h
        code/olsrd-0.6.0/lib/tas/src/lua/lua.h
        code/olsrd-0.6.0/lib/tas/src/lua/lualib.h
        code/olsrd-0.6.0/lib/tas/src/lua/lundump.c
        code/olsrd-0.6.0/lib/tas/src/lua/lundump.h
        code/olsrd-0.6.0/lib/tas/src/lua/lvm.c
        code/olsrd-0.6.0/lib/tas/src/lua/lvm.h
        code/olsrd-0.6.0/lib/tas/src/lua/lzio.c
        code/olsrd-0.6.0/lib/tas/src/lua/lzio.h
        code/olsrd-0.6.0/lib/tas/src/glua.c
        code/olsrd-0.6.0/lib/tas/src/glua.h
        code/olsrd-0.6.0/lib/tas/src/glua_ext.c
        code/olsrd-0.6.0/lib/tas/src/glua_ext.h
        code/olsrd-0.6.0/lib/tas/src/http.c
        code/olsrd-0.6.0/lib/tas/src/http.h
        code/olsrd-0.6.0/lib/tas/src/lib.c
        code/olsrd-0.6.0/lib/tas/src/lib.h
        code/olsrd-0.6.0/lib/tas/src/link.h
        code/olsrd-0.6.0/lib/tas/src/os_unix.c
        code/olsrd-0.6.0/lib/tas/src/os_unix.h
        code/olsrd-0.6.0/lib/tas/src/plugin.c
        code/olsrd-0.6.0/lib/tas/src/plugin.h
        code/olsrd-0.6.0/lib/tas/test.c
        code/olsrd-0.6.0/lib/txtinfo/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/txtinfo/src/olsrd_txtinfo.c
        code/olsrd-0.6.0/lib/txtinfo/src/olsrd_txtinfo.h
        code/olsrd-0.6.0/lib/watchdog/src/olsrd_plugin.c
        code/olsrd-0.6.0/lib/watchdog/src/olsrd_plugin.h
        code/olsrd-0.6.0/src/bsd/apm.c
        code/olsrd-0.6.0/src/bsd/dummy.c
        code/olsrd-0.6.0/src/bsd/kernel_routes.c
        code/olsrd-0.6.0/src/bsd/net.c
        code/olsrd-0.6.0/src/cfgparser/cfgfile_gen.c
        code/olsrd-0.6.0/src/cfgparser/olsrd_conf.c
        code/olsrd-0.6.0/src/cfgparser/olsrd_conf.h
        code/olsrd-0.6.0/src/common/autobuf.c
        code/olsrd-0.6.0/src/common/autobuf.h
        code/olsrd-0.6.0/src/common/avl.c
        code/olsrd-0.6.0/src/common/avl.h
        code/olsrd-0.6.0/src/common/list.c
        code/olsrd-0.6.0/src/common/list.h
        code/olsrd-0.6.0/src/linux/apm.c
        code/olsrd-0.6.0/src/linux/kernel_routes_ioctl.c
        code/olsrd-0.6.0/src/linux/kernel_routes_nl.c
        code/olsrd-0.6.0/src/linux/kernel_tunnel.c
        code/olsrd-0.6.0/src/linux/link_layer.c
        code/olsrd-0.6.0/src/linux/net.c
        code/olsrd-0.6.0/src/olsr_switch/commands.h
        code/olsrd-0.6.0/src/olsr_switch/link_rules.c
        code/olsrd-0.6.0/src/olsr_switch/link_rules.h
        code/olsrd-0.6.0/src/olsr_switch/main.c
        code/olsrd-0.6.0/src/olsr_switch/ohs_cmd.c
        code/olsrd-0.6.0/src/olsr_switch/ohs_cmd.h
        code/olsrd-0.6.0/src/olsr_switch/olsr_host_switch.h
        code/olsrd-0.6.0/src/unix/ifnet.c
        code/olsrd-0.6.0/src/unix/log.c
        code/olsrd-0.6.0/src/unix/misc.c
        code/olsrd-0.6.0/src/win32/arpa/inet.h
        code/olsrd-0.6.0/src/win32/ce/ws2tcpip.h
        code/olsrd-0.6.0/src/win32/net/if.h
        code/olsrd-0.6.0/src/win32/net/route.h
        code/olsrd-0.6.0/src/win32/netinet/in.h
        code/olsrd-0.6.0/src/win32/sys/ioctl.h
        code/olsrd-0.6.0/src/win32/sys/socket.h
        code/olsrd-0.6.0/src/win32/sys/time.h
        code/olsrd-0.6.0/src/win32/sys/times.h
        code/olsrd-0.6.0/src/win32/sys/utsname.h
        code/olsrd-0.6.0/src/win32/apm.c
        code/olsrd-0.6.0/src/win32/compat.c
        code/olsrd-0.6.0/src/win32/dlfcn.h
        code/olsrd-0.6.0/src/win32/dummy.c
        code/olsrd-0.6.0/src/win32/ifnet.c
        code/olsrd-0.6.0/src/win32/kernel_routes.c
        code/olsrd-0.6.0/src/win32/log.c
        code/olsrd-0.6.0/src/win32/misc.c
        code/olsrd-0.6.0/src/win32/net.c
        code/olsrd-0.6.0/src/win32/unistd.h
        code/olsrd-0.6.0/src/apm.h
        code/olsrd-0.6.0/src/build_msg.c
        code/olsrd-0.6.0/src/build_msg.h
        code/olsrd-0.6.0/src/defs.h
        code/olsrd-0.6.0/src/duplicate_handler.c
        code/olsrd-0.6.0/src/duplicate_handler.h
        code/olsrd-0.6.0/src/duplicate_set.c
        code/olsrd-0.6.0/src/duplicate_set.h
        code/olsrd-0.6.0/src/fpm.c
        code/olsrd-0.6.0/src/fpm.h
        code/olsrd-0.6.0/src/gateway.c
        code/olsrd-0.6.0/src/gateway.h
        code/olsrd-0.6.0/src/gateway_default_handler.c
        code/olsrd-0.6.0/src/gateway_default_handler.h
        code/olsrd-0.6.0/src/generate_msg.c
        code/olsrd-0.6.0/src/generate_msg.h
        code/olsrd-0.6.0/src/hashing.c
        code/olsrd-0.6.0/src/hashing.h
        code/olsrd-0.6.0/src/hna_set.c
        code/olsrd-0.6.0/src/hna_set.h
        code/olsrd-0.6.0/src/hysteresis.c
        code/olsrd-0.6.0/src/hysteresis.h
        code/olsrd-0.6.0/src/ifnet.h
        code/olsrd-0.6.0/src/interfaces.c
        code/olsrd-0.6.0/src/interfaces.h
        code/olsrd-0.6.0/src/ipc_frontend.c
        code/olsrd-0.6.0/src/ipc_frontend.h
        code/olsrd-0.6.0/src/ipcalc.c
        code/olsrd-0.6.0/src/ipcalc.h
        code/olsrd-0.6.0/src/kernel_routes.h
        code/olsrd-0.6.0/src/kernel_tunnel.h
        code/olsrd-0.6.0/src/link_set.c
        code/olsrd-0.6.0/src/link_set.h
        code/olsrd-0.6.0/src/log.h
        code/olsrd-0.6.0/src/lq_mpr.c
        code/olsrd-0.6.0/src/lq_mpr.h
        code/olsrd-0.6.0/src/lq_packet.c
        code/olsrd-0.6.0/src/lq_packet.h
        code/olsrd-0.6.0/src/lq_plugin.c
        code/olsrd-0.6.0/src/lq_plugin.h
        code/olsrd-0.6.0/src/lq_plugin_default_ff.c
        code/olsrd-0.6.0/src/lq_plugin_default_ff.h
        code/olsrd-0.6.0/src/lq_plugin_default_ffeth.c
        code/olsrd-0.6.0/src/lq_plugin_default_ffeth.h
        code/olsrd-0.6.0/src/lq_plugin_default_float.c
        code/olsrd-0.6.0/src/lq_plugin_default_float.h
        code/olsrd-0.6.0/src/lq_plugin_default_fpm.c
        code/olsrd-0.6.0/src/lq_plugin_default_fpm.h
        code/olsrd-0.6.0/src/main.c
        code/olsrd-0.6.0/src/mantissa.c
        code/olsrd-0.6.0/src/mantissa.h
        code/olsrd-0.6.0/src/mid_set.c
        code/olsrd-0.6.0/src/mid_set.h
        code/olsrd-0.6.0/src/misc.h
        code/olsrd-0.6.0/src/mpr.c
        code/olsrd-0.6.0/src/mpr.h
        code/olsrd-0.6.0/src/mpr_selector_set.c
        code/olsrd-0.6.0/src/mpr_selector_set.h
        code/olsrd-0.6.0/src/neighbor_table.c
        code/olsrd-0.6.0/src/neighbor_table.h
        code/olsrd-0.6.0/src/net_olsr.c
        code/olsrd-0.6.0/src/net_olsr.h
        code/olsrd-0.6.0/src/net_os.h
        code/olsrd-0.6.0/src/olsr.c
        code/olsrd-0.6.0/src/olsr.h
        code/olsrd-0.6.0/src/olsr_cfg.h
        code/olsrd-0.6.0/src/olsr_cookie.c
        code/olsrd-0.6.0/src/olsr_cookie.h
        code/olsrd-0.6.0/src/olsr_niit.c
        code/olsrd-0.6.0/src/olsr_niit.h
        code/olsrd-0.6.0/src/olsr_protocol.h
        code/olsrd-0.6.0/src/olsr_spf.c
        code/olsrd-0.6.0/src/olsr_spf.h
        code/olsrd-0.6.0/src/olsr_types.h
        code/olsrd-0.6.0/src/olsrd_plugin.h
        code/olsrd-0.6.0/src/packet.c
        code/olsrd-0.6.0/src/packet.h
        code/olsrd-0.6.0/src/parser.c
        code/olsrd-0.6.0/src/parser.h
        code/olsrd-0.6.0/src/plugin_loader.c
        code/olsrd-0.6.0/src/plugin_loader.h
        code/olsrd-0.6.0/src/plugin_util.c
        code/olsrd-0.6.0/src/plugin_util.h
        code/olsrd-0.6.0/src/print_packet.c
        code/olsrd-0.6.0/src/print_packet.h
        code/olsrd-0.6.0/src/process_package.c
        code/olsrd-0.6.0/src/process_package.h
        code/olsrd-0.6.0/src/process_routes.c
        code/olsrd-0.6.0/src/process_routes.h
        code/olsrd-0.6.0/src/rebuild_packet.c
        code/olsrd-0.6.0/src/rebuild_packet.h
        code/olsrd-0.6.0/src/routing_table.c
        code/olsrd-0.6.0/src/routing_table.h
        code/olsrd-0.6.0/src/scheduler.c
        code/olsrd-0.6.0/src/scheduler.h
        code/olsrd-0.6.0/src/tc_set.c
        code/olsrd-0.6.0/src/tc_set.h
        code/olsrd-0.6.0/src/two_hop_neighbor_table.c
        code/olsrd-0.6.0/src/two_hop_neighbor_table.h
        code/quagga-0.99.21路由协议代码/babeld/babel_filter.c
        code/quagga-0.99.21路由协议代码/babeld/babel_filter.h
        code/quagga-0.99.21路由协议代码/babeld/babel_interface.c
        code/quagga-0.99.21路由协议代码/babeld/babel_interface.h
        code/quagga-0.99.21路由协议代码/babeld/babel_main.c
        code/quagga-0.99.21路由协议代码/babeld/babel_main.h
        code/quagga-0.99.21路由协议代码/babeld/babel_zebra.c
        code/quagga-0.99.21路由协议代码/babeld/babel_zebra.h
        code/quagga-0.99.21路由协议代码/babeld/babeld.c
        code/quagga-0.99.21路由协议代码/babeld/babeld.h
        code/quagga-0.99.21路由协议代码/babeld/kernel.c
        code/quagga-0.99.21路由协议代码/babeld/kernel.h
        code/quagga-0.99.21路由协议代码/babeld/message.c
        code/quagga-0.99.21路由协议代码/babeld/message.h
        code/quagga-0.99.21路由协议代码/babeld/neighbour.c
        code/quagga-0.99.21路由协议代码/babeld/neighbour.h
        code/quagga-0.99.21路由协议代码/babeld/net.c
        code/quagga-0.99.21路由协议代码/babeld/net.h
        code/quagga-0.99.21路由协议代码/babeld/resend.c
        code/quagga-0.99.21路由协议代码/babeld/resend.h
        code/quagga-0.99.21路由协议代码/babeld/route.c
        code/quagga-0.99.21路由协议代码/babeld/route.h
        code/quagga-0.99.21路由协议代码/babeld/source.c
        code/quagga-0.99.21路由协议代码/babeld/source.h
        code/quagga-0.99.21路由协议代码/babeld/util.c
        code/quagga-0.99.21路由协议代码/babeld/util.h
        code/quagga-0.99.21路由协议代码/babeld/xroute.c
        code/quagga-0.99.21路由协议代码/babeld/xroute.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_advertise.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_advertise.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_aspath.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_aspath.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_attr.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_attr.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_clist.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_clist.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_community.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_community.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_damp.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_damp.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_debug.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_debug.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_dump.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_dump.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_ecommunity.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_ecommunity.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_filter.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_filter.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_fsm.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_fsm.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_main.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_mpath.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_mpath.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_mplsvpn.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_mplsvpn.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_network.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_network.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_nexthop.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_nexthop.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_open.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_open.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_packet.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_packet.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_regex.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_regex.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_route.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_route.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_routemap.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_snmp.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_snmp.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_table.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_table.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_vty.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_vty.h
        code/quagga-0.99.21路由协议代码/bgpd/bgp_zebra.c
        code/quagga-0.99.21路由协议代码/bgpd/bgp_zebra.h
        code/quagga-0.99.21路由协议代码/bgpd/bgpd.c
        code/quagga-0.99.21路由协议代码/bgpd/bgpd.h
        code/quagga-0.99.21路由协议代码/isisd/include-netbsd/clnp.h
        code/quagga-0.99.21路由协议代码/isisd/include-netbsd/esis.h
        code/quagga-0.99.21路由协议代码/isisd/include-netbsd/iso.h
        code/quagga-0.99.21路由协议代码/isisd/topology/random.c
        code/quagga-0.99.21路由协议代码/isisd/topology/spgrid.c
        code/quagga-0.99.21路由协议代码/isisd/topology/spgrid.h
        code/quagga-0.99.21路由协议代码/isisd/dict.c
        code/quagga-0.99.21路由协议代码/isisd/dict.h
        code/quagga-0.99.21路由协议代码/isisd/isis_adjacency.c
        code/quagga-0.99.21路由协议代码/isisd/isis_adjacency.h
        code/quagga-0.99.21路由协议代码/isisd/isis_bpf.c
        code/quagga-0.99.21路由协议代码/isisd/isis_circuit.c
        code/quagga-0.99.21路由协议代码/isisd/isis_circuit.h
        code/quagga-0.99.21路由协议代码/isisd/isis_common.h
        code/quagga-0.99.21路由协议代码/isisd/isis_constants.h
        code/quagga-0.99.21路由协议代码/isisd/isis_csm.c
        code/quagga-0.99.21路由协议代码/isisd/isis_csm.h
        code/quagga-0.99.21路由协议代码/isisd/isis_dlpi.c
        code/quagga-0.99.21路由协议代码/isisd/isis_dr.c
        code/quagga-0.99.21路由协议代码/isisd/isis_dr.h
        code/quagga-0.99.21路由协议代码/isisd/isis_dynhn.c
        code/quagga-0.99.21路由协议代码/isisd/isis_dynhn.h
        code/quagga-0.99.21路由协议代码/isisd/isis_events.c
        code/quagga-0.99.21路由协议代码/isisd/isis_events.h
        code/quagga-0.99.21路由协议代码/isisd/isis_flags.c
        code/quagga-0.99.21路由协议代码/isisd/isis_flags.h
        code/quagga-0.99.21路由协议代码/isisd/isis_lsp.c
        code/quagga-0.99.21路由协议代码/isisd/isis_lsp.h
        code/quagga-0.99.21路由协议代码/isisd/isis_main.c
        code/quagga-0.99.21路由协议代码/isisd/isis_misc.c
        code/quagga-0.99.21路由协议代码/isisd/isis_misc.h
        code/quagga-0.99.21路由协议代码/isisd/isis_network.h
        code/quagga-0.99.21路由协议代码/isisd/isis_pdu.c
        code/quagga-0.99.21路由协议代码/isisd/isis_pdu.h
        code/quagga-0.99.21路由协议代码/isisd/isis_pfpacket.c
        code/quagga-0.99.21路由协议代码/isisd/isis_route.c
        code/quagga-0.99.21路由协议代码/isisd/isis_route.h
        code/quagga-0.99.21路由协议代码/isisd/isis_routemap.c
        code/quagga-0.99.21路由协议代码/isisd/isis_spf.c
        code/quagga-0.99.21路由协议代码/isisd/isis_spf.h
        code/quagga-0.99.21路由协议代码/isisd/isis_tlv.c
        code/quagga-0.99.21路由协议代码/isisd/isis_tlv.h
        code/quagga-0.99.21路由协议代码/isisd/isis_zebra.c
        code/quagga-0.99.21路由协议代码/isisd/isis_zebra.h
        code/quagga-0.99.21路由协议代码/isisd/isisd.c
        code/quagga-0.99.21路由协议代码/isisd/isisd.h
        code/quagga-0.99.21路由协议代码/isisd/iso_checksum.c
        code/quagga-0.99.21路由协议代码/isisd/iso_checksum.h
        code/quagga-0.99.21路由协议代码/lib/buffer.c
        code/quagga-0.99.21路由协议代码/lib/buffer.h
        code/quagga-0.99.21路由协议代码/lib/checksum.c
        code/quagga-0.99.21路由协议代码/lib/checksum.h
        code/quagga-0.99.21路由协议代码/lib/command.c
        code/quagga-0.99.21路由协议代码/lib/command.h
        code/quagga-0.99.21路由协议代码/lib/daemon.c
        code/quagga-0.99.21路由协议代码/lib/distribute.c
        code/quagga-0.99.21路由协议代码/lib/distribute.h
        code/quagga-0.99.21路由协议代码/lib/filter.c
        code/quagga-0.99.21路由协议代码/lib/filter.h
        code/quagga-0.99.21路由协议代码/lib/getopt.c
        code/quagga-0.99.21路由协议代码/lib/getopt.h
        code/quagga-0.99.21路由协议代码/lib/getopt1.c
        code/quagga-0.99.21路由协议代码/lib/hash.c
        code/quagga-0.99.21路由协议代码/lib/hash.h
        code/quagga-0.99.21路由协议代码/lib/if.c
        code/quagga-0.99.21路由协议代码/lib/if.h
        code/quagga-0.99.21路由协议代码/lib/if_rmap.c
        code/quagga-0.99.21路由协议代码/lib/if_rmap.h
        code/quagga-0.99.21路由协议代码/lib/jhash.c
        code/quagga-0.99.21路由协议代码/lib/jhash.h
        code/quagga-0.99.21路由协议代码/lib/keychain.c
        code/quagga-0.99.21路由协议代码/lib/keychain.h
        code/quagga-0.99.21路由协议代码/lib/linklist.c
        code/quagga-0.99.21路由协议代码/lib/linklist.h
        code/quagga-0.99.21路由协议代码/lib/log.c
        code/quagga-0.99.21路由协议代码/lib/log.h
        code/quagga-0.99.21路由协议代码/lib/md5.c
        code/quagga-0.99.21路由协议代码/lib/md5.h
        code/quagga-0.99.21路由协议代码/lib/memory.c
        code/quagga-0.99.21路由协议代码/lib/memory.h
        code/quagga-0.99.21路由协议代码/lib/memtypes.c
        code/quagga-0.99.21路由协议代码/lib/memtypes.h
        code/quagga-0.99.21路由协议代码/lib/network.c
        code/quagga-0.99.21路由协议代码/lib/network.h
        code/quagga-0.99.21路由协议代码/lib/pid_output.c
        code/quagga-0.99.21路由协议代码/lib/plist.c
        code/quagga-0.99.21路由协议代码/lib/plist.h
        code/quagga-0.99.21路由协议代码/lib/pqueue.c
        code/quagga-0.99.21路由协议代码/lib/pqueue.h
        code/quagga-0.99.21路由协议代码/lib/prefix.c
        code/quagga-0.99.21路由协议代码/lib/prefix.h
        code/quagga-0.99.21路由协议代码/lib/privs.c
        code/quagga-0.99.21路由协议代码/lib/privs.h
        code/quagga-0.99.21路由协议代码/lib/regex-gnu.h
        code/quagga-0.99.21路由协议代码/lib/regex.c
        code/quagga-0.99.21路由协议代码/lib/route_types.h
        code/quagga-0.99.21路由协议代码/lib/routemap.c
        code/quagga-0.99.21路由协议代码/lib/routemap.h
        code/quagga-0.99.21路由协议代码/lib/sigevent.c
        code/quagga-0.99.21路由协议代码/lib/sigevent.h
        code/quagga-0.99.21路由协议代码/lib/smux.c
        code/quagga-0.99.21路由协议代码/lib/smux.h
        code/quagga-0.99.21路由协议代码/lib/sockopt.c
        code/quagga-0.99.21路由协议代码/lib/sockopt.h
        code/quagga-0.99.21路由协议代码/lib/sockunion.c
        code/quagga-0.99.21路由协议代码/lib/sockunion.h
        code/quagga-0.99.21路由协议代码/lib/str.c
        code/quagga-0.99.21路由协议代码/lib/str.h
        code/quagga-0.99.21路由协议代码/lib/stream.c
        code/quagga-0.99.21路由协议代码/lib/stream.h
        code/quagga-0.99.21路由协议代码/lib/table.c
        code/quagga-0.99.21路由协议代码/lib/table.h
        code/quagga-0.99.21路由协议代码/lib/thread.c
        code/quagga-0.99.21路由协议代码/lib/thread.h
        code/quagga-0.99.21路由协议代码/lib/vector.c
        code/quagga-0.99.21路由协议代码/lib/vector.h
        code/quagga-0.99.21路由协议代码/lib/version.h
        code/quagga-0.99.21路由协议代码/lib/vty.c
        code/quagga-0.99.21路由协议代码/lib/vty.h
        code/quagga-0.99.21路由协议代码/lib/workqueue.c
        code/quagga-0.99.21路由协议代码/lib/workqueue.h
        code/quagga-0.99.21路由协议代码/lib/zassert.h
        code/quagga-0.99.21路由协议代码/lib/zclient.c
        code/quagga-0.99.21路由协议代码/lib/zclient.h
        code/quagga-0.99.21路由协议代码/lib/zebra.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_abr.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_abr.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_area.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_area.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_asbr.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_asbr.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_flood.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_flood.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_interface.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_interface.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_intra.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_intra.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_lsa.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_lsa.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_lsdb.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_lsdb.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_main.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_message.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_message.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_neighbor.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_neighbor.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_network.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_network.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_proto.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_proto.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_route.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_route.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_snmp.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_snmp.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_spf.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_spf.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_top.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_top.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_zebra.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6_zebra.h
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6d.c
        code/quagga-0.99.21路由协议代码/ospf6d/ospf6d.h
        code/quagga-0.99.21路由协议代码/ospfclient/ospf_apiclient.c
        code/quagga-0.99.21路由协议代码/ospfclient/ospf_apiclient.h
        code/quagga-0.99.21路由协议代码/ospfclient/ospfclient.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_abr.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_abr.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_api.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_api.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_apiserver.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_apiserver.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_asbr.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_asbr.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_ase.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_ase.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_dump.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_dump.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_flood.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_flood.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_ia.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_ia.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_interface.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_interface.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_ism.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_ism.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_lsa.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_lsa.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_lsdb.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_lsdb.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_main.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_neighbor.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_neighbor.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_network.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_network.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_nsm.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_nsm.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_opaque.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_opaque.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_packet.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_packet.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_route.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_route.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_routemap.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_snmp.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_snmp.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_spf.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_spf.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_te.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_te.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_vty.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_vty.h
        code/quagga-0.99.21路由协议代码/ospfd/ospf_zebra.c
        code/quagga-0.99.21路由协议代码/ospfd/ospf_zebra.h
        code/quagga-0.99.21路由协议代码/ospfd/ospfd.c
        code/quagga-0.99.21路由协议代码/ospfd/ospfd.h
        code/quagga-0.99.21路由协议代码/ripd/rip_debug.c
        code/quagga-0.99.21路由协议代码/ripd/rip_debug.h
        code/quagga-0.99.21路由协议代码/ripd/rip_interface.c
        code/quagga-0.99.21路由协议代码/ripd/rip_interface.h
        code/quagga-0.99.21路由协议代码/ripd/rip_main.c
        code/quagga-0.99.21路由协议代码/ripd/rip_offset.c
        code/quagga-0.99.21路由协议代码/ripd/rip_peer.c
        code/quagga-0.99.21路由协议代码/ripd/rip_routemap.c
        code/quagga-0.99.21路由协议代码/ripd/rip_snmp.c
        code/quagga-0.99.21路由协议代码/ripd/rip_zebra.c
        code/quagga-0.99.21路由协议代码/ripd/ripd.c
        code/quagga-0.99.21路由协议代码/ripd/ripd.h
        code/quagga-0.99.21路由协议代码/ripngd/ripng_debug.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_debug.h
        code/quagga-0.99.21路由协议代码/ripngd/ripng_interface.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_main.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_nexthop.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_nexthop.h
        code/quagga-0.99.21路由协议代码/ripngd/ripng_offset.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_peer.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_route.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_route.h
        code/quagga-0.99.21路由协议代码/ripngd/ripng_routemap.c
        code/quagga-0.99.21路由协议代码/ripngd/ripng_zebra.c
        code/quagga-0.99.21路由协议代码/ripngd/ripngd.c
        code/quagga-0.99.21路由协议代码/ripngd/ripngd.h
        code/quagga-0.99.21路由协议代码/tests/aspath_test.c
        code/quagga-0.99.21路由协议代码/tests/bgp_capability_test.c
        code/quagga-0.99.21路由协议代码/tests/bgp_mp_attr_test.c
        code/quagga-0.99.21路由协议代码/tests/bgp_mpath_test.c
        code/quagga-0.99.21路由协议代码/tests/ecommunity_test.c
        code/quagga-0.99.21路由协议代码/tests/heavy-thread.c
        code/quagga-0.99.21路由协议代码/tests/heavy-wq.c
        code/quagga-0.99.21路由协议代码/tests/heavy.c
        code/quagga-0.99.21路由协议代码/tests/main.c
        code/quagga-0.99.21路由协议代码/tests/test-buffer.c
        code/quagga-0.99.21路由协议代码/tests/test-checksum.c
        code/quagga-0.99.21路由协议代码/tests/test-memory.c
        code/quagga-0.99.21路由协议代码/tests/test-privs.c
        code/quagga-0.99.21路由协议代码/tests/test-sig.c
        code/quagga-0.99.21路由协议代码/tests/test-stream.c
        code/quagga-0.99.21路由协议代码/vtysh/vtysh.c
        code/quagga-0.99.21路由协议代码/vtysh/vtysh.h
        code/quagga-0.99.21路由协议代码/vtysh/vtysh_config.c
        code/quagga-0.99.21路由协议代码/vtysh/vtysh_main.c
        code/quagga-0.99.21路由协议代码/vtysh/vtysh_user.c
        code/quagga-0.99.21路由协议代码/vtysh/vtysh_user.h
        code/quagga-0.99.21路由协议代码/watchquagga/watchquagga.c
        code/quagga-0.99.21路由协议代码/zebra/connected.c
        code/quagga-0.99.21路由协议代码/zebra/connected.h
        code/quagga-0.99.21路由协议代码/zebra/debug.c
        code/quagga-0.99.21路由协议代码/zebra/debug.h
        code/quagga-0.99.21路由协议代码/zebra/if_ioctl.c
        code/quagga-0.99.21路由协议代码/zebra/if_ioctl_solaris.c
        code/quagga-0.99.21路由协议代码/zebra/if_netlink.c
        code/quagga-0.99.21路由协议代码/zebra/if_proc.c
        code/quagga-0.99.21路由协议代码/zebra/if_sysctl.c
        code/quagga-0.99.21路由协议代码/zebra/interface.c
        code/quagga-0.99.21路由协议代码/zebra/interface.h
        code/quagga-0.99.21路由协议代码/zebra/ioctl.c
        code/quagga-0.99.21路由协议代码/zebra/ioctl.h
        code/quagga-0.99.21路由协议代码/zebra/ioctl_null.c
        code/quagga-0.99.21路由协议代码/zebra/ioctl_solaris.c
        code/quagga-0.99.21路由协议代码/zebra/ipforward.h
        code/quagga-0.99.21路由协议代码/zebra/ipforward_aix.c
        code/quagga-0.99.21路由协议代码/zebra/ipforward_ews.c
        code/quagga-0.99.21路由协议代码/zebra/ipforward_proc.c
        code/quagga-0.99.21路由协议代码/zebra/ipforward_solaris.c
        code/quagga-0.99.21路由协议代码/zebra/ipforward_sysctl.c
        code/quagga-0.99.21路由协议代码/zebra/irdp.h
        code/quagga-0.99.21路由协议代码/zebra/irdp_interface.c
        code/quagga-0.99.21路由协议代码/zebra/irdp_main.c
        code/quagga-0.99.21路由协议代码/zebra/irdp_packet.c
        code/quagga-0.99.21路由协议代码/zebra/kernel_netlink.c
        code/quagga-0.99.21路由协议代码/zebra/kernel_null.c
        code/quagga-0.99.21路由协议代码/zebra/kernel_socket.c
        code/quagga-0.99.21路由协议代码/zebra/kernel_socket.h
        code/quagga-0.99.21路由协议代码/zebra/main.c
        code/quagga-0.99.21路由协议代码/zebra/misc_null.c
        code/quagga-0.99.21路由协议代码/zebra/mtu_kvm.c
        code/quagga-0.99.21路由协议代码/zebra/redistribute.c
        code/quagga-0.99.21路由协议代码/zebra/redistribute.h
        code/quagga-0.99.21路由协议代码/zebra/redistribute_null.c
        code/quagga-0.99.21路由协议代码/zebra/rib.h
        code/quagga-0.99.21路由协议代码/zebra/router-id.c
        code/quagga-0.99.21路由协议代码/zebra/router-id.h
        code/quagga-0.99.21路由协议代码/zebra/rt.h
        code/quagga-0.99.21路由协议代码/zebra/rt_ioctl.c
        code/quagga-0.99.21路由协议代码/zebra/rt_netlink.c
        code/quagga-0.99.21路由协议代码/zebra/rt_socket.c
        code/quagga-0.99.21路由协议代码/zebra/rtadv.c
        code/quagga-0.99.21路由协议代码/zebra/rtadv.h
        code/quagga-0.99.21路由协议代码/zebra/rtread_getmsg.c
        code/quagga-0.99.21路由协议代码/zebra/rtread_netlink.c
        code/quagga-0.99.21路由协议代码/zebra/rtread_proc.c
        code/quagga-0.99.21路由协议代码/zebra/rtread_sysctl.c
        code/quagga-0.99.21路由协议代码/zebra/test_main.c
        code/quagga-0.99.21路由协议代码/zebra/zebra_rib.c
        code/quagga-0.99.21路由协议代码/zebra/zebra_routemap.c
        code/quagga-0.99.21路由协议代码/zebra/zebra_snmp.c
        code/quagga-0.99.21路由协议代码/zebra/zebra_vty.c
        code/quagga-0.99.21路由协议代码/zebra/zserv.c
        code/quagga-0.99.21路由协议代码/zebra/zserv.h
        RFC/AODV---rfc3561.txt
        RFC/BGP---rfc1267.txt
        RFC/DSR---rfc4728.txt
        RFC/IS-IS---rfc1142.txt
        RFC/OLSR---rfc3626.txt
        RFC/OSPFv2---rfc1583.txt
        RFC/RIPng---rfc2080.txt
        RFC/RIPv1---rfc1058.txt
        RFC/RIPv2----rfc2453.txt)

add_executable(NSA2018 ${SOURCE_FILES})